Make curves on the SVG and fix alignment of text

--- a/app/javascript/app/components/country/emission-sources-chart/emission-sources-chart-styles.scss
+++ b/app/javascript/app/components/country/emission-sources-chart/emission-sources-chart-styles.scss
@@ -29,6 +29,10 @@
       text-align: center;
       left: 50%;
       transform: translate(-50%, -50%);
+
+      &.fitRight {
+        transform: translate(-100%, -50%);
+      }
     }
   }
 }
